Slight intro copy tweaks

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,11 +16,11 @@
       <div class="story-content">
         <p>
           You impact every student who walks through your door.
-          Give those students and parents a place to share
-          with you—and the world—the difference you’ve&nbsp;made.
+          Give those students and their parents a place to share
+          the difference you’ve&nbsp;made.
         </p>
         <p>
-          Create a résumé of lives changed,
+          Create a profile of lives changed,
           and re-discover your&nbsp;inspiration!
         </p>
       </div>
