Changle sample link copy

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,8 +8,8 @@
     <h1 class="cta-title"><b>Inspiring stories</b> from the lives you've changed.</h1>
 
     <article class="story published public">
-      <a href="https://www.theknetwork.org/teacher/sample/" class="sample-icon">
-        See a live demo!
+      <a href="/teacher/sample/" class="sample-icon">
+        See a sample teacher profile!
       </a>
 
       <div class="story-body">
