--- a/templates/_add_story_form.html
+++ b/templates/_add_story_form.html
@@ -7,7 +7,7 @@
   {% endwith %}
 
   {% if user == teacher.user %}
-    {% include "forms/formfield.html" with field=form.submitter_name label="From" help_text="Who sent you this story? (First name only)." %}
+    {% include "forms/formfield.html" with field=form.submitter_name label="From" help_text="Who sent you this story? (First name only)" %}
     {% include "forms/formfield.html" with field=form.nominal_date label="Date Received" help_text="MM/DD/YYYY"%}
   {% else %}
     {% with label="For "|add:teacher.full_name|add:"'s eyes only" %}
