--- a/sass/modules/_story.scss
+++ b/sass/modules/_story.scss
@@ -31,6 +31,8 @@ $status-hidden-color: color($yellow lighter);
 $status-hidden-icon: eye-blocked;
 $status-private-color: color(lighter);
 $status-private-icon: lock;
+$status-quoted-color: color($cyan light);
+$status-quoted-icon: quote-right;
 
 %story-status {
   @extend %has-tooltip;
@@ -60,7 +62,7 @@ $status-private-icon: lock;
 .status-icon {
   @include story-status-icon('hidden', $status-hidden-icon, $status-hidden-color);
   @include story-status-icon('private', $status-private-icon, $status-private-color);
-  .hidden.private & { @include before($icon-lock); }
+  @include story-status-icon('quoted', $status-quoted-icon, $status-quoted-color);
 }
 
 // Story Body
@@ -86,6 +88,7 @@ $status-private-icon: lock;
 
   @include story-body-status('hidden', $status-hidden-color);
   @include story-body-status('private', $status-private-color);
+  @include story-body-status('quoted', $status-quoted-color);
 }
 
 .story-content {
