--- a/static/css/styleguide.css
+++ b/static/css/styleguide.css
@@ -185,12 +185,12 @@ a:focus, a:hover, a:active {
 
 @font-face {
   font-family: "knet";
-  src: url('../fonts/knet.woff?4b6471790c23e2d527904597afc648c30dc55669') format("woff"), url('../fonts/knet.ttf?8995ed93eed189d78deafc7bb31e5f2110724c78') format("truetype");
+  src: url('../fonts/knet.woff?1ac4348a28f76a96da19f4c7d892a5cc6db934e9') format("woff"), url('../fonts/knet.ttf?19df15282163cbbb3764b8efb608018d9f4bf36e') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
-.user-nav [name="logout"]:before, #messages .close:before, .user-nav .fb-login:before, .announce:before, .message:before, .loading-icon:before, .login .fb-login:before, .icon-addstory:before, .hidden .status-icon:before, .private .status-icon:before, .story-status:before, .delete-story:before, .sample-icon:link:before, .sample-icon:visited:before, .cta .fb-login:before, .icons-demo div:nth-child(1):before, .icons-demo div:nth-child(2):before, .icons-demo div:nth-child(3):before, .icons-demo div:nth-child(4):before, .icons-demo div:nth-child(5):before, .icons-demo div:nth-child(6):before, .icons-demo div:nth-child(7):before, .icons-demo div:nth-child(8):before, .icons-demo div:nth-child(9):before, .icons-demo div:nth-child(10):before, .icons-demo div:nth-child(11):before, .icons-demo div:nth-child(12):before, .icons-demo div:nth-child(13):before, .icons-demo div:nth-child(14):before, .icons-demo div:nth-child(15):before, [data-icon]:before {
+.user-nav [name="logout"]:before, #messages .close:before, .user-nav .fb-login:before, .announce:before, .message:before, .loading-icon:before, .login .fb-login:before, .icon-addstory:before, .hidden .status-icon:before, .private .status-icon:before, .quoted .status-icon:before, .story-status:before, .delete-story:before, .sample-icon:link:before, .sample-icon:visited:before, .cta .fb-login:before, .icons-demo div:nth-child(1):before, .icons-demo div:nth-child(2):before, .icons-demo div:nth-child(3):before, .icons-demo div:nth-child(4):before, .icons-demo div:nth-child(5):before, .icons-demo div:nth-child(6):before, .icons-demo div:nth-child(7):before, .icons-demo div:nth-child(8):before, .icons-demo div:nth-child(9):before, .icons-demo div:nth-child(10):before, .icons-demo div:nth-child(11):before, .icons-demo div:nth-child(12):before, .icons-demo div:nth-child(13):before, .icons-demo div:nth-child(14):before, .icons-demo div:nth-child(15):before, .icons-demo div:nth-child(16):before, [data-icon]:before {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -278,6 +278,10 @@ a:focus, a:hover, a:active {
 
 .loading-icon:before, .icons-demo div:nth-child(15):before {
   content: "\e00e";
+}
+
+.quoted .status-icon:before, .icons-demo div:nth-child(16):before {
+  content: "\f10e";
 }
 
 button {
@@ -586,10 +590,10 @@ select {
   right: 0.31944rem;
 }
 
-.hidden .status-icon, .private .status-icon, .sample-icon:link, .sample-icon:visited, .story-status, .delete-story {
+.hidden .status-icon, .private .status-icon, .quoted .status-icon, .sample-icon:link, .sample-icon:visited, .story-status, .delete-story {
   position: relative;
 }
-.no-touch .hidden .status-icon:hover .tooltip, .hidden .no-touch .status-icon:hover .tooltip, .no-touch .private .status-icon:hover .tooltip, .private .no-touch .status-icon:hover .tooltip, .no-touch .sample-icon:hover:link .tooltip, .no-touch .sample-icon:hover:visited .tooltip, .no-touch .story-status:hover .tooltip, .no-touch .delete-story:hover .tooltip {
+.no-touch .hidden .status-icon:hover .tooltip, .hidden .no-touch .status-icon:hover .tooltip, .no-touch .private .status-icon:hover .tooltip, .private .no-touch .status-icon:hover .tooltip, .no-touch .quoted .status-icon:hover .tooltip, .quoted .no-touch .status-icon:hover .tooltip, .no-touch .sample-icon:hover:link .tooltip, .no-touch .sample-icon:hover:visited .tooltip, .no-touch .story-status:hover .tooltip, .no-touch .delete-story:hover .tooltip {
   display: block;
 }
 
@@ -1288,7 +1292,7 @@ select {
   clear: both;
 }
 
-.hidden .status-icon, .private .status-icon, .sample-icon:link, .sample-icon:visited {
+.hidden .status-icon, .private .status-icon, .quoted .status-icon, .sample-icon:link, .sample-icon:visited {
   font-size: 14px;
   font-size: 0.77778rem;
   line-height: 29px;
@@ -1311,8 +1315,9 @@ select {
   background: #b2b2b2;
   color: #191919;
 }
-.hidden.private .status-icon:before {
-  content: "\e001";
+.quoted .status-icon {
+  background: #7bd3d3;
+  color: #191919;
 }
 
 .story-body {
@@ -1353,6 +1358,12 @@ select {
 }
 .private .story-body:before {
   border-top-color: #b2b2b2;
+}
+.quoted .story-body {
+  border-color: #7bd3d3;
+}
+.quoted .story-body:before {
+  border-top-color: #7bd3d3;
 }
 
 .story-content {
@@ -2394,6 +2405,26 @@ body {
 }
 .icons-demo div:nth-child(15):after {
   content: "heart";
+  font-size: 18px;
+  font-size: 1rem;
+  line-height: 23px;
+  line-height: 1.27778rem;
+}
+.icons-demo div:nth-child(16) {
+  display: block;
+  float: left;
+  margin-right: 2.55556rem;
+}
+.icons-demo div:nth-child(16):focus, .icons-demo div:nth-child(16):hover, .icons-demo div:nth-child(16):active {
+  color: #94001a;
+}
+.icons-demo div:nth-child(16):before {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: .4em;
+}
+.icons-demo div:nth-child(16):after {
+  content: "quote-right";
   font-size: 18px;
   font-size: 1rem;
   line-height: 23px;
