add defuscate; cleanup tos

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8" />
 
   <!-- Page Info -->
-  <title>{% block title %}K Network{% endblock %}</title>
+  <title>{% block title %}The K Network{% endblock %}</title>
   <meta name="description" content="{% block description %}Teachers, use your computer to text parents in seconds. Free. Simple. Organized.{% endblock description %}" />
 
   <!-- Site Info -->
