Add URL for privacy policy.

--- a/templates/terms_of_service.html
+++ b/templates/terms_of_service.html
@@ -49,7 +49,7 @@
     <li>
       <h3 id="privacy_notice">Privacy Notice</h3>
       <p>
-        Your privacy is important to The K Network. Please read our <a href="{# @@@ url 'privacy' #}">Privacy Policy</a> carefully for information relating to The K Network’s collection, use, and disclosure of your personal information. If you are a User that requests help from a Coach, you hereby acknowledge that The K Network may disclose your information to the Coaches listed on your account.
+        Your privacy is important to The K Network. Please read our <a href="{% url 'privacy-policy' %}">Privacy Policy</a> carefully for information relating to The K Network’s collection, use, and disclosure of your personal information. If you are a User that requests help from a Coach, you hereby acknowledge that The K Network may disclose your information to the Coaches listed on your account.
       </p>
       <a href="#tos" class="top-link">Back to Top</a>
     </li>
