fix wrong end tag

--- a/templates/home.html
+++ b/templates/home.html
@@ -50,5 +50,5 @@
     <h1 class="logo">The K Network.</h1>
     <p class="tagline">Exploring what's possible in the world of teaching and learning.</p>
   </header>
-</div>
+</article>
 {% endblock %}
