add page titles

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,5 +1,7 @@
 {% extends "base_site.html" %}
 
+{% block title %}Login | {{ block.super }}{% endblock %}
+
 {% load accounts %}
 
 {% block main %}
