--- a/templates/create_profile.html
+++ b/templates/create_profile.html
@@ -1,5 +1,7 @@
 {% extends "base_site.html" %}
 
+{% block title %}Create a Profile | {{ block.super }}{% endblock %}
+
 {% block main %}
 <div class="create-profile">
   <h1 class="welcome-title">Welcome to The K Network!</h1>
