add keywords and description meta attrs

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,10 @@
 
   <!-- Site Info -->
   {% block robots %}<meta name="robots" content="index, follow" />{% endblock %}
-  <meta name="author" content="K Network" />
-  <meta name="keywords" content="keywords" />
+  <meta name="author" content="The K Network" />
+  <meta name="keywords" content="education teacher student story inspiration mentor" />
   <meta name="language" content="en-us" />
+  <meta name="description" content="Lets teachers collect inspiring stories from parents and students about how they have changed lives and made a difference" />
 
   <meta name="p:domain_verify" content="5deb9fa05f1845e9f0ffca0716b22c6c" />
 
